done game main functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="continer">
-        <div id="matrix"></div>
+        <div id="matrix" class="game"></div>
     </div>
 </body>
 
