add the new pice position hilghting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="side">
             <div class="score">
                 <p>score</p>
-                <span id="score">3000000</span>
+                <span id="score">0</span>
             </div>
 
             <div class="buttons">
